--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,22 +1,32 @@
 # dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp
 .pnp.js
-/.env
 
 # testing
-/coverage
+coverage/
 
 # production
-/build
+build/
+dist/
 
-# misc
-.DS_Store
+# environment variables - FIXED (no leading slash)
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+*.env
 
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
